--- a/.github/workflows/taoskeeper-test.yml
+++ b/.github/workflows/taoskeeper-test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: 'stable'
 
       - name: Install system dependencies
         run: |
