--- a/.github/workflows/tdengine-release-build.yml
+++ b/.github/workflows/tdengine-release-build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.23
+          go-version: 'stable'
 
       - name: Install dependencies on Linux
         if: runner.os == 'Linux'
