--- a/docs/examples/JDBC/springbootdemo/src/main/resources/application.properties
+++ b/docs/examples/JDBC/springbootdemo/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.aop.proxy-target-class=true
 
 spring.jooq.sql-dialect=
 #mybatis
-mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.mapper-locations=classpath:com/taosdata/example/springbootdemo/dao/*.xml
 logging.level.com.taosdata.jdbc.springbootdemo.dao=debug
