chore(JDBC): fix jdbc demo vulnerabilities (#34514)
Closes:

- https://project.feishu.cn/taosdata_td/defect/detail/6769701722
- https://project.feishu.cn/taosdata_td/defect/detail/6769703621
- https://project.feishu.cn/taosdata_td/defect/detail/6769622333
- https://project.feishu.cn/taosdata_td/defect/detail/6769660096
- https://project.feishu.cn/taosdata_td/defect/detail/6769414905
- https://project.feishu.cn/taosdata_td/defect/detail/6769444164
- https://project.feishu.cn/taosdata_td/defect/detail/6769452200
- https://project.feishu.cn/taosdata_td/defect/detail/6767732261
- https://project.feishu.cn/taosdata_td/defect/detail/6769417781
- https://project.feishu.cn/taosdata_td/defect/detail/6713473789
- https://project.feishu.cn/taosdata_td/defect/detail/6713502070
- https://project.feishu.cn/taosdata_td/defect/detail/6713233913
- https://project.feishu.cn/taosdata_td/defect/detail/6713577199

--- a/docs/examples/JDBC/JDBCDemo/pom.xml
+++ b/docs/examples/JDBC/JDBCDemo/pom.xml
@@ -11,8 +11,9 @@
 
     <properties>
         <project.assembly.dir>src/main/resources/assembly</project.assembly.dir>
-        <java.version>1.8</java.version>
-
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -24,7 +25,7 @@
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
-            <version>1.19.0</version>
+            <version>1.20.0</version>
         </dependency>
     </dependencies>
 
@@ -33,7 +34,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>3.7.1</version>
                 <executions>
                     <!-- jdbcDemo -->
                     <execution>
@@ -98,9 +99,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>17</source>
+                    <target>17</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
